--- a/AppBolivar/Src/Consulta Medica Atencion.fx.yaml
+++ b/AppBolivar/Src/Consulta Medica Atencion.fx.yaml
@@ -196,7 +196,7 @@
                     Y: =211
                     ZIndex: =5
 
-                Gallery6_9 As gallery.galleryVertical:
+                galTratamiento As gallery.galleryVertical:
                     Height: =113
                     Items: =var_Tratamiento_a_Usar
                     Layout: =Layout.Vertical
@@ -504,7 +504,7 @@
                     TemplateSize: =30
                     Visible: =_detalles="medicamentos"
                     Width: =250
-                    X: =Gallery6_9.X+Gallery6_9.Width
+                    X: =galTratamiento.X+galTratamiento.Width
                     Y: =91
                     ZIndex: =19
 
@@ -527,7 +527,7 @@
                     Text: ="Servicios"
                     Visible: =_detalles="medicamentos"&&Gallery6_12.AllItemsCount>0
                     Width: =144
-                    X: =Gallery6_9.X+Gallery6_9.Width
+                    X: =galTratamiento.X+galTratamiento.Width
                     Y: =68
                     ZIndex: =21
 
@@ -681,8 +681,8 @@
                     Image38 As image:
                         Height: =30
                         Image: =Edit
-                        OnSelect: |-
-                            =UpdateContext({varPopupTratamiento:true})
+                        OnSelect: |
+                            =UpdateContext({varPopupTratamiento:true});
                         PaddingBottom: =5
                         PaddingLeft: =5
                         PaddingRight: =5
@@ -6830,10 +6830,11 @@
         HoverColor: |-
             =ColorValue("#26495B")
         HoverFill: =RGBA(255, 255, 255, 1)
-        OnSelect: |
+        OnSelect: |-
             =Collect(ColNuevoTratamiento_DCA,{codigo:GUID(),Medicamento:MedicamentoSeleccionar.medicamento,Descripción:TextInput19_13.Text});
             Reset(TextInput19_12);
-            Set(MedicamentoSeleccionar,Blank())
+            Set(MedicamentoSeleccionar,Blank());
+            Reset(TextInput19_13);
         RadiusBottomLeft: =8
         RadiusBottomRight: =8
         RadiusTopLeft: =8
@@ -6872,7 +6873,6 @@
                 Defaults('public.Medical_Center_Tratamiento_Maestro'),
                 {
                     id: varIDTratamiento,
-                
                     fecha: Today(),
                     id_Paciente: TicketSelected.DNI_Paciente,
                     Diagnostico:Gallery10.Selected.COD_4,
@@ -6900,10 +6900,10 @@
                         Descripción: var.Descripción,
                         fecha: Today(),
                          Especialidad: LookUp('public.Medical_Center_Especialidad', id =  LookUp('public.Medical_Center_S&E_Relacion', id = LookUp('public.Medical_Center_R&D_Relacion', id_doctor = getUser.id And id_sede = _varSede.id).id_se_relacion).id_especialidad).Especialidad,
-                        Cod_4_Diagnostico: Gallery10.Selected.COD_4,
+                        Cod_4_Diagnostico: Gallery10.Selected.id,
                         id_sede : _varSede.id,
-                        Cod_Tratamiento:varIDTratamiento
-                    }
+                        Cod_Tratamiento:varIDTratamiento,
+                        id_ticket: TicketSelected.id_Ticket }
                 )
             );
             
@@ -7208,7 +7208,8 @@
                         'public.Medical_Center_Usuario',
                         Correo = User().Email,
                         Especialidad
-                    )
+                    ),
+                    id_ticket: TicketSelected.id_Ticket
                 }
             );
             Set(MedicamentoEditarSeleccionar,Blank());
@@ -8372,7 +8373,7 @@
                         TemplatePadding: =0
                         TemplateSize: =40
                         Width: =250
-                        X: =Gallery6_9.X+Gallery6_9.Width
+                        X: =galTratamiento.X+galTratamiento.Width
                         Y: =91
                         ZIndex: =2
 
@@ -8510,7 +8511,7 @@
                         TemplateSize: =40
                         Visible: =_detalles="medicamentos"
                         Width: =250
-                        X: =Gallery6_9.X+Gallery6_9.Width
+                        X: =galTratamiento.X+galTratamiento.Width
                         Y: =91
                         ZIndex: =2
 
@@ -8991,7 +8992,7 @@
                             );
                             If(Checkbox1_1.Value=true,
                             
-                            ForAll( Gallery6_9.AllItems As Medic,
+                            ForAll( galTratamiento.AllItems As Medic,
                             Patch(
                                 'public.Medical_Center_Medicamento_Paciente',
                                 Defaults('public.Medical_Center_Medicamento_Paciente'),
@@ -9326,7 +9327,7 @@
                                     
                                     </tr>
                                     </thead>  " & Concat(
-                                    Gallery6_9.AllItems,
+                                    galTratamiento.AllItems,
                                     "
                                     <tr>
                                     
@@ -9919,7 +9920,7 @@
                                     
                                     </tr>
                                     </thead>  " & Concat(
-                                    Gallery6_9.AllItems,
+                                    galTratamiento.AllItems,
                                     "
                                     <tr>
                                     
@@ -15486,7 +15487,7 @@
 
                 TextInput51_3 As text:
                     BorderColor: =RGBA(0, 0, 0, 1)
-                    Default: =LookUp('public.Medical_Center_Diagnostico', COD_4 = First(var_Tratamiento_a_Usar).Cod_4_Diagnostico).DESRIPCION_COD_4
+                    Default: =LookUp('public.Medical_Center_Diagnostico', id = galTratamiento.Selected.Cod_4_Diagnostico).DESRIPCION_COD_4
                     Font: =Font.'Segoe UI'
                     Height: =38
                     RadiusBottomLeft: =8
@@ -15545,7 +15546,7 @@
                     FontWeight: =FontWeight.Semibold
                     Text: ="Descripción de Consumo"
                     Width: =218
-                    X: =275
+                    X: =255
                     ZIndex: =2
 
                 EvidenciasButton_19 As button:
@@ -15568,57 +15569,59 @@
                     Visible: =If(IsBlank(galDescansoMedico.Selected) && _detalles="medicamentos",true,false)
                     Width: =232
                     X: =184
-                    Y: =196
+                    Y: =169
                     ZIndex: =4
 
                 "galEditTratamiento As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0'":
                     DelayItemLoading: =true
-                    Height: =175
-                    Items: =var_Tratamiento_a_Usar
+                    Height: =126
+                    Items: =Filter('public.Medical_Center_Tratamiento', id_Pacientes = TicketSelected.DNI_Paciente, id_ticket = TicketSelected.id_Ticket)
                     Layout: =Layout.Vertical
                     LoadingSpinner: =LoadingSpinner.Data
                     TemplatePadding: =0
                     TemplateSize: =54
                     Width: =601
+                    Y: =43
                     ZIndex: =13
-
-                    Dropdown1_3 As dropdown:
-                        BorderThickness: =0
-                        ChevronBackground: =ColorFondoBoton
-                        Default: =ThisItem.Medicamento
-                        Height: =35
-                        Items: |-
-                            =//Filter(Filter('public.Medical_Center_Medicamentos',Or(id_sede = _varSede.id,IsBlank(Consultorio))),Or(
-                             //Upper(Dropdown1_3.AccessibleLabel) in Upper(medicamento) 
-                            
-                             Filter('public.Medical_Center_Medicamentos',id_sede =_varSede.id)
-                        Size: =10
-                        Width: =194
-                        X: =10
-                        ZIndex: =1
 
                     TextInput51_6 As text:
                         BorderColor: =RGBA(0, 0, 0, 1)
                         Default: =ThisItem.Descripción
                         Font: =Font.'Segoe UI'
+                        Height: =32
+                        OnChange: |-
+                            =Patch('public.Medical_Center_Tratamiento',LookUp('public.Medical_Center_Tratamiento', id = ThisItem.id),{
+                            Descripción: Self.Text
+                            });
                         RadiusBottomLeft: =8
                         RadiusBottomRight: =8
                         RadiusTopLeft: =8
                         RadiusTopRight: =8
                         Size: =12
                         Width: =275
-                        X: =269
+                        X: =260
+                        Y: =11
                         ZIndex: =2
 
                     Image41_4 As image:
-                        Height: =30
+                        Height: =20
                         Image: =Delete
-                        OnSelect: |-
-                            =//UpdateContext({_varDUser: ThisItem});
-                            //UpdateContext({_varDUsers: true});
-                        Width: =30
-                        X: =556
+                        OnSelect: =Remove('public.Medical_Center_Tratamiento', galEditTratamiento.Selected)
+                        Width: =20
+                        X: =568
+                        Y: =17
                         ZIndex: =3
+
+                    Label61_8 As label:
+                        Font: =Font.'Segoe UI'
+                        FontWeight: =FontWeight.Semibold
+                        Size: =9
+                        Text: =ThisItem.Medicamento
+                        Width: =240
+                        Wrap: =ThisItem.Medicamento
+                        X: =8
+                        Y: =7
+                        ZIndex: =4
 
             Container37 As groupContainer.verticalAutoLayoutContainer:
                 LayoutDirection: =LayoutDirection.Vertical
@@ -15789,7 +15792,7 @@
                             TemplateSize: =50
                             Visible: =_detalles="medicamentos"
                             Width: =250
-                            X: =Gallery6_9.X+Gallery6_9.Width
+                            X: =galTratamiento.X+galTratamiento.Width
                             Y: =91
                             ZIndex: =2
 
